--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -17,6 +17,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<version>2.1.5.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -26,6 +27,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.1.5.RELEASE</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
